<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="20dp"
    android:paddingRight="24dp"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_port_name"
        style="@style/Text.DialogLabel" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/hint_port_name"
        android:inputType="text"
        style="@style/Edit.Field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_port"
        style="@style/Text.DialogLabel" />

    <EditText
        android:id="@+id/et_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="25600"
        android:inputType="number"
        style="@style/Edit.Field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_port_kind"
        style="@style/Text.DialogLabel" />

    <RadioGroup
        android:id="@+id/rg_kind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_webdav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="WebDAV"
            android:textColor="@color/ink" />

        <RadioButton
            android:id="@+id/rb_smb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="SMB"
            android:textColor="@color/ink" />

        <RadioButton
            android:id="@+id/rb_opds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="OPDS"
            android:textColor="@color/ink" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_port_path"
        style="@style/Text.DialogLabel" />

    <EditText
        android:id="@+id/et_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="/opds"
        android:inputType="textUri"
        style="@style/Edit.Field" />
</LinearLayout>
